# flycheap

./: .gitignore  Cargo.toml  README.md  test
src/: config.rs  lib.rs  main.rs  money.rs  session.rs
src/flights/: mod.rs  offer.rs  price_request.rs  price_response.rs  request.rs  search_request.rs  search_response.rs
tests/: flights.rs
tests/mocks/: roundtrip.http
